Fix overflow

--- a/src/containers/BeerListingScroll/style.css
+++ b/src/containers/BeerListingScroll/style.css
@@ -1,3 +1,7 @@
+.redux-lazy-scroll {
+  overflow: hidden !important;
+}
+
 .BeerListingScroll-wrapper {
   display: flex;
   align-items: space-between;
